2.k8s/manifest/4.view-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: view-service
  namespace: enc-app-dev
spec:
  selector:
    matchLabels:
      app: view-service
  template:
    metadata:
      labels:
        app: view-service
    spec:
      containers:
        - name: view-service
          image: tranphuquy19/enc-app-view-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: view-service
  namespace: enc-app-dev
spec:
  selector:
    app: view-service
  ports:
    - port: 80
      targetPort: 8080
